# KTAB

./: .gitignore
KTAB/cmakemodules/: FindAlglib.cmake  FindExprtk.cmake
KTAB/kmodel/libsrc/: kmodel.h  kmodelsql.cpp
examples/: buildEX.sh  cleanEX.sh  distCleanEX.sh  reconfigEX.sh
examples/econOptim/: CMakeLists.txt  README.txt  econoptim-logger.conf  sampleinput.xml
examples/econOptim/libsrc/: EconOptimModel.cpp  EconOptimModel.h  EconOptimizer.cpp  EconOptimizer.h  XMLParser.cpp  XMLParser.h
examples/econOptim/src/: EconOptimizer.h  minlm_d_v_example.cpp
examples/econOptim/src/exprtk/: exprtk.hpp
examples/econOptim/src/xml/: xmlParser.h
examples/smp/: CMakeLists.txt
examples/smp/SMPQ/: runsmp.cpp
examples/smp/libsrc/: smp.cpp
examples/smp/src/: demosmp.cpp
